--- a/trunk/diamandas/pages/locale/pl/LC_MESSAGES/django.po
+++ b/trunk/diamandas/pages/locale/pl/LC_MESSAGES/django.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2007-09-08 22:19+0200\n"
+"POT-Creation-Date: 2008-07-03 00:42+0200\n"
 "PO-Revision-Date: 2005-09-28 12:52+0900\n"
 "Last-Translator: Piotr Maliński <riklaunim@gmail.com>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
@@ -15,75 +15,150 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
-#: models.py:16
-msgid "Title"
-msgstr "Tytuł"
-
-#: models.py:17
-msgid "Slug"
-msgstr "Odnośnik"
-
-#: models.py:18
-msgid "Description"
-msgstr "Opis"
-
-#: models.py:19
-msgid "Markdown Text"
-msgstr "Markdown"
-
-#: models.py:20
-msgid "Use Markdown Text"
-msgstr "Używaj Tekstu Markdown"
-
-#: models.py:21
-msgid "Text"
-msgstr "Tekst"
-
-#: models.py:22
-msgid "Right Menu"
-msgstr "Prawe Menu"
-
-#: models.py:23
-msgid "Type"
-msgstr "Typ"
-
-#: models.py:23 templates/pages/news_list.html:3
+#: models.py:19 templates/pages/news_list.html:3
 #: templates/pages/news_list.html.py:4 templates/pages/news_list.html:5
-#: templates/pages/news_list.html.py:7 templates/pages/news_list.html:29
+#: templates/pages/news_list.html.py:8 templates/pages/news_list.html:35
 msgid "News"
 msgstr "News"
 
-#: models.py:23
+#: models.py:19
 msgid "Article"
 msgstr "Artykuł"
 
-#: models.py:23
+#: models.py:19 models.py:54
 msgid "Book"
-msgstr "Księga"
+msgstr "Kategoria"
+
+#: models.py:20
+msgid ""
+"If you add a book and want to display a link to it in the menu enter 1 or "
+"greater value"
+msgstr ""
+"Jeżeli dodajesz kategorię i chcesz wyświetlić link do niej w głównym menu to "
+"podaj wartość 1 lub większą"
+
+#: models.py:21
+msgid ""
+"Select a forum in which comment topics will be created (for this and child "
+"entries). You can set this for every book, and Articles/News placed in them "
+"will use book settings."
+msgstr ""
+"Podaj forum, w którym tematy-komentarze będą tworzone (dla tego wpisu i "
+"wpisów zależnych). Możesz ustawić dla wszystkich kategorii, a zawarte w niej "
+"Artykuły/Wiadomości będą korzystały z tych ustawień."
+
+#: models.py:23 models.py:118 templates/pages/submit.html:16
+msgid "Title"
+msgstr "Tytuł"
 
 #: models.py:24
+msgid "Slug"
+msgstr "Odnośnik"
+
+#: models.py:25
+msgid "Description"
+msgstr "Opis"
+
+#: models.py:26 models.py:119
+msgid "Text"
+msgstr "Tekst"
+
+#: models.py:27
+msgid "Type"
+msgstr "Typ"
+
+#: models.py:28
 msgid "Place in"
 msgstr "Umieść w"
+
+#: models.py:30
+msgid "Updated"
+msgstr "Aktualizacja"
 
 #: models.py:31
 msgid "Changes summary"
 msgstr "Podsumowanie zmian"
 
-#: models.py:33 models.py:34
+#: models.py:32
+msgid "Book order"
+msgstr "Kolejność kategorii"
+
+#: models.py:33 models.py:120
+msgid "Author"
+msgstr "Autor"
+
+#: models.py:42 models.py:50 templates/pages/submit.html:22
 msgid "Content"
 msgstr "Treść"
 
-#: models.py:45
-msgid "Other"
-msgstr "Inne"
+#: models.py:43
+msgid "1. Content"
+msgstr "1. Treść"
 
-#: models.py:47
-msgid "Markdown"
-msgstr "Markdown"
+#: models.py:58
+msgid "Updates"
+msgstr "Aktualizacje"
 
-#: views.py:48 templates/404.html:4
+#: models.py:121
+msgid "Added"
+msgstr "Dodane"
+
+#: models.py:123
+msgid "Submission"
+msgstr "Zgłoszenie"
+
+#: models.py:124
+msgid "2. Submissions"
+msgstr "2. Zgłoszenia"
+
+#: views.py:83 templates/404.html:4
 msgid "Page does not exist"
 msgstr "Strona nie istnieje"
+
+#: views.py:133 views.py:134 views.py:135 views.py:195 views.py:196
+msgid "Anonymous"
+msgstr "Anonim"
+
+#: views.py:140
+#, python-format
+msgid "Comments for: %s"
+msgstr "Komentarze dla: %s"
+
+#: views.py:149
+msgid "This is a discussion about article"
+msgstr "To jest dyskusja poświęcona artykułowi"
+
+#: views.py:176
+msgid "Comment Topic Created"
+msgstr "Temat Komentarzy Stworzony"
+
+#: views.py:176
+msgid "Topic added"
+msgstr "Temat dodany"
+
+#: views.py:178 views.py:243
+msgid "Comment added succesfuly."
+msgstr "Komentarz dodany pomyślnie."
+
+#: views.py:239
+msgid "Comment Post Added"
+msgstr "Post Komentarza Dodany"
+
+#: views.py:240
+msgid "Post Added"
+msgstr "Post Dodany"
+
+#: views.py:274
+msgid ""
+"Your article have been saved. Staff will review the article and publish it "
+"afterwards."
+msgstr ""
+"Twój artykuł został zapisany. Redator przejży go i opublikuje jeżeli będzie "
+"się nadawał."
+
+#: feedupdate.py:111 feedupdate.py:220
+msgid "Solved: "
+msgstr "Rozwiązany: "
 
 #: templates/500.html:4
 msgid "Site Error"
@@ -97,127 +172,236 @@ msgstr ""
 "Pełna informacja o zaistniałym błędzie została wysłana administratorowi. "
 "Problem zostanie rozwiązany najszybciej jak to możliwe ;)"
 
-#: templates/500.html:7 templates/404.html:6 templates/pages/bug.html:6
+#: templates/500.html:7 templates/404.html:6 templates/pages/submit.html:39
 msgid "Main Page"
 msgstr "Strona Główna"
 
-#: templates/pages/body.html:21
-msgid "My Account"
-msgstr "Moje Konto"
+#: templates/pages/body.html:17
+msgid "You are here"
+msgstr "Jesteś tutaj"
 
-#: templates/pages/body.html:21
-msgid "Login or Register"
-msgstr "Zaloguj lub Zarejestruj"
-
-#: templates/pages/body.html:22
-msgid "Forum"
-msgstr "Forum"
-
-#: templates/pages/body.html:23
-msgid "Translations"
-msgstr "Tłumaczenia"
-
-#: templates/pages/body.html:24
-msgid "Baldurs Gate Characters"
-msgstr "Postacie Baldurs Gate"
-
-#: templates/pages/body.html:27 templates/pages/show.html:5
-#: templates/pages/show_news.html:5 templates/pages/news_list.html:26
-#: templates/pages/news_list.html.py:29
+#: templates/pages/body.html:17 templates/pages/show.html:7
+#: templates/pages/show_index.html:3 templates/pages/show_news.html:7
+#: templates/pages/news_list.html:32 templates/pages/news_list.html.py:35
+#: templates/pages/submit.html:6
 msgid "Home"
 msgstr "Biblioteka"
 
-#: templates/pages/body.html:73
-msgid "Links"
-msgstr "Dodatkowe Menu"
+#: templates/pages/body.html:21
+msgid "Search"
+msgstr "Szukaj"
 
-#: templates/pages/body.html:75 templates/pages/show.html:20
-#: templates/pages/show_news.html:18
+#: templates/pages/body.html:28
+msgid "Categories:"
+msgstr "Kategorie:"
+
+#: templates/pages/body.html:37
+msgid "Forum"
+msgstr "Forum"
+
+#: templates/pages/body.html:40
+msgid "My Account"
+msgstr "Moje Konto"
+
+#: templates/pages/body.html:43
+msgid "Compleate OpenID registration"
+msgstr "Uzupełnij rejestrację OpenID"
+
+#: templates/pages/body.html:45
+msgid "Login or Register"
+msgstr "Zaloguj lub Zarejestruj"
+
+#: templates/pages/body.html:60 templates/pages/show.html:77
+#: templates/pages/show_news.html:72 templates/pages/show_news.html.py:78
 msgid "Browse news"
 msgstr "Przeglądaj newsy"
 
-#: templates/pages/body.html:77
+#: templates/pages/body.html:61
 msgid "RSS - Latest Publications"
 msgstr "RSS - Ostatnie Publikacje"
 
-#: templates/pages/body.html:80
-msgid "About Me"
-msgstr "O Mnie"
+#: templates/pages/show.html:14 templates/pages/show_news.html:16
+msgid "Read comments"
+msgstr "Czytaj komentarze"
 
-#: templates/pages/body.html:81
-msgid "About My Sites"
-msgstr "O Bibliotekach"
-
-#: templates/pages/body.html:85
-msgid "Change theme"
-msgstr "Zmień wygląd"
-
-#: templates/pages/show.html:15 templates/pages/show_news.html:15
-#: templates/pages/news_list.html:24
-msgid "Options"
-msgstr "Opcje"
-
-#: templates/pages/show.html:17 templates/pages/show_index.html:37
-#: templates/pages/show_news.html:17
+#: templates/pages/show.html:16 templates/pages/show.html.py:68
+#: templates/pages/show_news.html:18 templates/pages/show_news.html.py:71
 msgid "Comments"
 msgstr "Komentarze"
 
-#: templates/pages/show.html:18 templates/pages/show.html.py:19
-#: templates/pages/show_news.html:19
+#: templates/pages/show.html:21 templates/pages/show_news.html:23
+msgid "Add a Comment"
+msgstr "Dodaj Komentarz"
+
+#: templates/pages/show.html:27 templates/pages/show.html.py:54
+#: templates/pages/show_news.html:30 templates/pages/show_news.html.py:57
+msgid "Add comment"
+msgstr "Dodaj komentarz"
+
+#: templates/pages/show.html:30 templates/pages/show_news.html:33
+msgid "Nick"
+msgstr "Imię"
+
+#: templates/pages/show.html:37 templates/pages/show_news.html:40
+msgid "Comment"
+msgstr "Komentarz"
+
+#: templates/pages/show.html:56 templates/pages/show_news.html:59
+msgid "Read all comments"
+msgstr "Przeczytaj wszystkie komentarze"
+
+#: templates/pages/show.html:63 templates/pages/show_news.html:66
+msgid "Comments have been disabled for this page"
+msgstr "Komentarze zostały wyłączone dla tej strony"
+
+#: templates/pages/show.html:70
 msgid "RSS Feed for"
 msgstr "Kanał RSS dla"
 
-#: templates/pages/show.html:20
-msgid "Browse book news"
-msgstr "Przeglądaj newsy z księgi"
+#: templates/pages/show.html:71 templates/pages/show.html.py:75
+#: templates/pages/show_news.html:76
+msgid "Browse category news"
+msgstr "Przeglądaj wiadomości z kategorii"
 
-#: templates/pages/show.html:21 templates/pages/show_news.html:20
-msgid "Edit"
-msgstr "Edytuj"
+#: templates/pages/show.html:74 templates/pages/show_news.html:75
+msgid "Category RSS Feed"
+msgstr "Kanał RSS Kategorii"
 
-#: templates/pages/show_index.html:37
-msgid "Added:"
-msgstr "Dodane:"
+#: templates/pages/show.html:80 templates/pages/show_news.html:79
+#: templates/pages/news_list.html:33
+msgid "Add Content"
+msgstr "Dodaj Artykuł"
 
-#: templates/pages/show_index.html:37
-msgid "Read"
-msgstr "Czytaj"
+#: templates/pages/show.html:81 templates/pages/show_news.html:80
+msgid "Admin"
+msgstr "Admin"
 
-#: templates/pages/show_index.html:37
-msgid "Update!"
-msgstr "Aktualizacja!"
+#: templates/pages/show_index.html:7
+msgid "RSS"
+msgstr "RSS"
 
-#: templates/pages/show_index.html:37
-msgid "Book:"
-msgstr "Księga:"
+#: templates/pages/show_index.html:8
+msgid "Whats new?"
+msgstr "Co nowego?"
 
-#: templates/pages/show_index.html:43
-msgid "Latest Topics"
-msgstr "Na Forum"
-
-#: templates/pages/show_index.html:45
-msgid "Latests Comments"
-msgstr "Ostatnie Komentarze"
-
-#: templates/pages/show_index.html:47
-msgid "Latest Characters"
-msgstr "Ostatnie Postacie"
-
-#: templates/pages/show_index.html:50
-msgid "Latest Translations"
-msgstr "Ostatnie Tłumaczenia"
-
-#: templates/pages/show_index.html:53
+#: templates/pages/show_index.html:12
 msgid "Users online"
 msgstr "Użytkownicy online"
 
-#: templates/pages/news_list.html:16
+#: templates/pages/bug.html:5
+msgid "You can go to"
+msgstr "Możesz przejść na"
+
+#: templates/pages/bug.html:5
+msgid "main page"
+msgstr "stronę główną"
+
+#: templates/pages/bug.html:5
+msgid "or login on this website using"
+msgstr "lub zalogować się na stronie używając"
+
+#: templates/pages/bug.html:5
+msgid "login form"
+msgstr "formularza logowania"
+
+#: templates/pages/show_news.html:83
+msgid "Edit"
+msgstr "Edytuj"
+
+#: templates/pages/news_list.html:15
+msgid "There are no news."
+msgstr "Brak wiadomości."
+
+#: templates/pages/news_list.html:21
 msgid "Previous Page"
 msgstr "Poprzednia Strona"
 
-#: templates/pages/news_list.html:19
+#: templates/pages/news_list.html:24
 msgid "Next Page"
 msgstr "Następna Strona"
+
+#: templates/pages/news_list.html:31
+msgid "Go Back"
+msgstr "Wstecz"
+
+#: templates/pages/msg.html:9
+msgid "You will be redirected back in 2 seconds."
+msgstr "Zostaniesz przeniesiony spowrotem za 2 sekundy."
+
+#: templates/pages/msg.html:9
+msgid "Click here if you don't want to wait"
+msgstr "Kliknij tutaj jeżeli nie chcesz czekać"
+
+#: templates/pages/submit.html:3 templates/pages/submit.html.py:4
+#: templates/pages/submit.html:5
+msgid "Submit Content"
+msgstr "Dodaj Artykuł"
+
+#: templates/pages/submit.html:13
+msgid "Submit new content"
+msgstr "Dodaj nowy artykuł"
+
+#: templates/pages/submit.html:31
+msgid "Save"
+msgstr "Zapis"
+
+#: templates/feed/content_rss.html:6
+msgid "Update"
+msgstr "Aktualizacja"
+
+#~ msgid "Markdown Text"
+#~ msgstr "Markdown"
+
+#~ msgid "Use Markdown Text"
+#~ msgstr "Używaj Tekstu Markdown"
+
+#~ msgid "Right Menu"
+#~ msgstr "Prawe Menu"
+
+#~ msgid "Other"
+#~ msgstr "Inne"
+
+#~ msgid "Markdown"
+#~ msgstr "Markdown"
+
+#~ msgid "Translations"
+#~ msgstr "Tłumaczenia"
+
+#~ msgid "Baldurs Gate Characters"
+#~ msgstr "Postacie Baldurs Gate"
+
+#~ msgid "Links"
+#~ msgstr "Dodatkowe Menu"
+
+#~ msgid "About Me"
+#~ msgstr "O Mnie"
+
+#~ msgid "About My Sites"
+#~ msgstr "O Bibliotekach"
+
+#~ msgid "Change theme"
+#~ msgstr "Zmień wygląd"
+
+#~ msgid "Options"
+#~ msgstr "Opcje"
+
+#~ msgid "Read"
+#~ msgstr "Czytaj"
+
+#~ msgid "Book:"
+#~ msgstr "Księga:"
+
+#~ msgid "Latest Topics"
+#~ msgstr "Na Forum"
+
+#~ msgid "Latests Comments"
+#~ msgstr "Ostatnie Komentarze"
+
+#~ msgid "Latest Characters"
+#~ msgstr "Ostatnie Postacie"
+
+#~ msgid "Latest Translations"
+#~ msgstr "Ostatnie Tłumaczenia"
 
 #~ msgid "Infinity Engie Mods"
 #~ msgstr "Mody Infinity"
