fixed a typo in Polish translation, better thumbnails (sharpen, antialias) for rk:thumb

--- a/trunk/diamandas/myghtyboard/locale/pl/LC_MESSAGES/django.po
+++ b/trunk/diamandas/myghtyboard/locale/pl/LC_MESSAGES/django.po
@@ -524,7 +524,7 @@ msgstr "Dodaj Nowy Temat"
 
 #: templates/myghtyboard/topics_list.html:48
 msgid "Filter topics"
-msgstr "Starsze Tematy"
+msgstr "Filtruj tematy"
 
 #: templates/myghtyboard/topics_list.html:53
 msgid "Filter"
