--- a/trunk/_doc/eng/changelog.txt
+++ b/trunk/_doc/eng/changelog.txt
@@ -1,6 +1,7 @@
 ~~ 2008.11 TEST ~~
 - Markdown/Content Submission removed
 - New layout with, fixed templates, better HTML and CSS
+- Fixed password reset and password change broken for no reason on django 1.0 / python 2.6
 
 ~~ 2008.09 STABLE ~~
 - German Translation
