--- a/trunk/_doc/eng/changelog.txt
+++ b/trunk/_doc/eng/changelog.txt
@@ -3,6 +3,10 @@
 - Markdown/Content Submission removed
 - New layout with, fixed templates, better HTML and CSS
 - Fixed password reset and password change broken for no reason on django 1.0 / python 2.6
+- "This is a discussion about article" posts will be ignored on Whats new feed and on comments list for Content entries
+- Myghtyboard Forum views splitted acros few files for cleaner code structure
+- Forum add topic/post views support Content/other objects for using topics as comments. post/topic code from pages removed, no code duplication
+- Pagestats doesn't use request.session while logging data (thus not flooding session table)
 
 ~~ 2008.09 STABLE ~~
 - German Translation
